# AIAssistentShowcase

./: .gitignore  README.md  pyproject.toml
src/aiassistentshowcase/: __main__.py  config.py
src/aiassistentshowcase/agents/: action_agent.py
src/aiassistentshowcase/agents/data_models/: dependencies.py  responses.py
src/aiassistentshowcase/agents/models/: mistral_model.py  model_factory.py  openai_model.py
src/aiassistentshowcase/agents/prompts/: system_prompts.py
src/aiassistentshowcase/agents/tools/: database_connection.py  tavily_search.py
src/aiassistentshowcase/streamlit/: app.py
